--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="url_website">http://camerakit.website</string>
 
     <string name="about_dialog_title">About</string>
-    <string name="about_dialog_message">Demo Version: %1$S (%2$d)\nCameraKit Version: %3$S</string>
+    <string name="about_dialog_message">Camera from Wonderklin - CameraKit.</string>
 
     <string name="drawer_open">Open Drawer</string>
     <string name="drawer_close">Close Drawer</string>
