--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,14 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
+    <!--From CameraKit-->
+    <string name="url_github">https://github.com/wonderkiln/camerakit-android</string>
+    <string name="url_website">http://camerakit.website</string>
+
+    <string name="about_dialog_title">About</string>
+    <string name="about_dialog_message">Camera from Wonderklin - CameraKit.</string>
+
+    <string name="drawer_open">Open Drawer</string>
+    <string name="drawer_close">Close Drawer</string>
+
 </resources>
