--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,15 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="toast_message">Toast message</string>
+    <string name="normal_toast_with_icon">NORMAL TOAST (WITH ICON)</string>
+    <string name="normal_toast_without_icon">NORMAL TOAST (WITHOUT ICON)</string>
+    <string name="warning_toast">WARNING TOAST</string>
+    <string name="info_toast">INFO TOAST</string>
+    <string name="info_toast_with_formatting">INFO TOAST WITH FORMATTING</string>
+    <string name="error_toast">ERROR TOAST</string>
+    <string name="success_toast">SUCCESS TOAST</string>
+    <string name="custom_configuration">CUSTOM CONFIGURATION</string>
 
     <!--From CameraKit-->
     <string name="url_github">https://github.com/wonderkiln/camerakit-android</string>
@@ -84,7 +93,29 @@
 
         This app is just one piece of a bigger series of apps. You can find the rest of them at http://www.simplemobiletools.com
     </string>
+    <string name="vibrate">vibrate</string>
+    <string name="power">power</string>
+    <string name="count">count</string>
+    <string name="comparecount">comparecount</string>
+    <string-array name="power">
+        <item>강하게</item>
+        <item>보통</item>
+        <item>약하게</item>
+    </string-array>
 
+    <string-array name="count">
+        <item>50</item>
+        <item>45</item>
+        <item>40</item>
+        <item>35</item>
+    </string-array>
+
+    <string-array name="comparecount">
+        <item>30</item>
+        <item>25</item>
+        <item>20</item>
+        <item>15</item>
+    </string-array>
     <!--
         Haven't found some strings? There's more at
         https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
